--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
 
-  <title>Weather Now - Your Complete Weather Companion</title>
+  <title>Weather Now</title>
 </head>
 <body>
   <div class="app" id="app">
